--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,3 +5,8 @@ spring:
     password: ${DB_PASS}
 server:
   port: 8082
+
+spring.jpa.generate-ddl: true
+spring.jpa.hibernate.ddl-auto: create
+spring.jpa.show-sql: true
+spring.jpa.properties.hibernate.dialect: org.hibernate.dialect.MySQL8Dialect
